simple expressions with reactive bindings
Signed-off-by: lee-orr <lee-orr@users.noreply.github.com>

--- a/assets/simple.css
+++ b/assets/simple.css
@@ -18,7 +18,7 @@
     font: "libre-baskerville/LibreBaskerville-Bold.ttf";
 }
 
-text.text_class {
+text#text.text_class {
     font: "libre-baskerville/LibreBaskerville-Regular.ttf";
     font-size: 30;
     color: blue;
